--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+
     <!-- Custom styles for this template -->
     <link href="css/logo-nav.css" rel="stylesheet">
 
@@ -42,17 +45,61 @@
               <a class="nav-link" href="demo.html">Demo</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Project Files</a>
+              <a class="nav-link" href="files.html">Project Files</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!-- Page Content -->
+ <!-- Page Content -->
     <div class="container">
-      <h1 class="mt-5">Logo Nav by Start Bootstrap</h1>
-      <p>The logo in the navbar is now a default Bootstrap feature in Bootstrap 4! Make sure to set the width and height of the logo within the HTML. For best results, it's recommended that you use an SVG image as your logo.</p>
+
+      <!-- Introduction Row -->
+      <h1 class="my-4">About Us
+        <small>It's Nice to Meet You!</small>
+      </h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+
+      <!-- Team Members Row -->
+      <div class="row">
+        <div class="col-lg-12">
+          <h2 class="my-4">Our Team</h2>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>Drew Casner
+          </h3>
+	  <a href="https://www.linkedin.com/in/drew-casner/" target="_blank"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://github.com/Andrew-Casner" target="_blank"><i class="fab fa-github"></i></a>
+	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>Jacob Tran
+          </h3>
+	  <a href="https://www.linkedin.com/in/in/jacob-tran-447136140/" target="_blank"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://github.com/jatr6994" target="_blank"><i class="fab fa-github"></i></a>
+	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>Joshua Paup
+          </h3>
+	  <a href="https://www.linkedin.com/in//" target="_blank"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://github.com/sdfhdfh" target="_blank"><i class="fab fa-github"></i></a>
+	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center mb-4">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <h3>Jason Hong
+          </h3>
+	  <a href="https://www.linkedin.com/in//" target="_blank"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://github.com/sdfhdfh" target="_blank"><i class="fab fa-github"></i></a>
+	  <a href="mailto:hongjy@colorado.edu"><i class="fas fa-at"></i></a>
+        </div>
+      </div>
+
     </div>
     <!-- /.container -->
 
