Up[dated images and contact

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h2 class="my-4">Our Team</h2>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/drew.png" alt="">
           <h3>Drew Casner
           </h3>
 	  <a href="https://www.linkedin.com/in/drew-casner/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -75,23 +75,23 @@
 	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/jacob.png" alt="">
           <h3>Jacob Tran
           </h3>
 	  <a href="https://www.linkedin.com/in/in/jacob-tran-447136140/" target="_blank"><i class="fab fa-linkedin"></i></a>
 	  <a href="https://github.com/jatr6994" target="_blank"><i class="fab fa-github"></i></a>
-	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
+	  <a href="mailto:Jacob.tran@colorado.edu"><i class="fas fa-at"></i></a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/josh.png" alt="">
           <h3>Joshua Paup
           </h3>
-	  <a href="https://www.linkedin.com/in//" target="_blank"><i class="fab fa-linkedin"></i></a>
-	  <a href="https://github.com/sdfhdfh" target="_blank"><i class="fab fa-github"></i></a>
-	  <a href="mailto:anca0444@colorado.edu"><i class="fas fa-at"></i></a>
+	  <a href="https://www.linkedin.com/in/joshuapaup/" target="_blank"><i class="fab fa-linkedin"></i></a>
+	  <a href="https://github.com/joshuapaup" target="_blank"><i class="fab fa-github"></i></a>
+	  <a href="mailto:joshua.paup@colorado.edu"><i class="fas fa-at"></i></a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-          <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
+          <img class="rounded-circle img-fluid d-block mx-auto" src="img/jason.png" alt="">
           <h3>Jason Hong
           </h3>
 	  <a href="https://www.linkedin.com/in//" target="_blank"><i class="fab fa-linkedin"></i></a>
