--- a/files.html
+++ b/files.html
@@ -52,7 +52,10 @@
     <!-- Page Content -->
     <div class="container">
       <h1 class="mt-5">Project Files</h1>
-      <p>I guess we need something here</p>
+      <h2 class="mt-5">Milestone 1</h2>
+      <embed src="img/Milestone1.pdf" width="100%" height="1000" type='application/pdf'>
+      <h2 class="mt-5">Milestone 2</h2>
+      <embed src="img/Milestone2.pdf" width="100%" height="1000" type='application/pdf'>
     </div>
     <!-- /.container -->
 
