--- a/files.html
+++ b/files.html
@@ -56,6 +56,8 @@
       <embed src="img/Milestone1.pdf" width="100%" height="1000" type='application/pdf'>
       <h2 class="mt-5">Milestone 2</h2>
       <embed src="img/Milestone2.pdf" width="100%" height="1000" type='application/pdf'>
+      <h2 class="mt-5">Milestone 3</h2>
+      <embed src="img/Milestone3.pdf" width="100%" height="1000" type='application/pdf'>
     </div>
     <!-- /.container -->
 
