--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
     <!-- Page Content -->
     <div class="container">
       <h1 class="mt-5">Demo Video</h1>
-      <iframe style="border: none;" width="100%" height="100%" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/J13lNwVOg7fQjO9DZqotnu9d/Sports-Reel-V2?node-id=5%3A2&scaling=min-zoom" allowfullscreen></iframe>
+      <iframe style="border: none;" width="100%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/proto/J13lNwVOg7fQjO9DZqotnu9d/Sports-Reel-V2?node-id=5%3A2&scaling=min-zoom" allowfullscreen></iframe>
     </div>
     <!-- /.container -->
 
