--- a/concept.html
+++ b/concept.html
@@ -52,7 +52,10 @@
     <!-- Page Content -->
     <div class="container">
       <h1 class="mt-5">Concept Video</h1>
-      <p>The Concept video description goes here</p>
+      <video width="100%" height="800" controls>
+	  <source src="https://s3-us-west-2.amazonaws.com/giveandgotest/CSCI3002_Concept.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+       </video>
     </div>
     <!-- /.container -->
 
